Commander-1.0: Changes in directory from where artifacts should be published

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,5 +45,5 @@ steps:
 # this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/Commander.zip' 
     artifactName: 'myWebsiteName'
